// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Field Default smoke-test 1`] = `
<div class="flex">
  <div class="flex flex-col gap-6 w-full max-w-sm">
    <div class="flex-grow flex flex-col gap-3">
      <label>
        <div class="font-medium text-grey-8">
          Description de l'action
        </div>
      </label>
      <input type="text"
             class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
             placeholder="Placeholder"
      >
    </div>
    <div class="flex-grow flex flex-col gap-3">
      <label>
        <div class="font-medium text-grey-8 text-sm">
          Small
        </div>
      </label>
      <input type="text"
             class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
             placeholder="Placeholder"
      >
    </div>
  </div>
</div>
`;

exports[`design-system/Field DisabledWithHint smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8 text-grey-5">
        Description de l'action
      </div>
      <span class="block mt-2 text-xs text-grey-7 text-grey-5">
        Texte description additionnel
      </span>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-grey-6">
      <span class="text-xs">
        Message d’information
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Field WithError smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-error-1">
      <span class="ri-spam-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
      </span>
      <span class="text-xs">
        Message d'erreur
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Field WithHint smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
      <span class="block mt-2 text-xs text-grey-7">
        Texte description additionnel
      </span>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-grey-8">
      <span class="text-xs">
        Message d’information
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Field WithInfo smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-info-1">
      <span class="ri-information-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
      </span>
      <span class="text-xs">
        Message d’information
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Field WithSuccess smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-success-1">
      <span class="ri-checkbox-circle-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
      </span>
      <span class="text-xs">
        Message de succès
      </span>
    </div>
  </div>
</div>
`;

exports[`design-system/Field WithWarning smoke-test 1`] = `
<div class="flex">
  <div class="flex-grow flex flex-col gap-3">
    <label>
      <div class="font-medium text-grey-8">
        Description de l'action
      </div>
    </label>
    <input type="text"
           class="border border-solid border-grey-4 rounded-lg min-h-[3rem] px-4 placeholder:text-sm"
           placeholder="Placeholder"
    >
    <div class="flex items-center text-warning-1">
      <span class="ri-alert-fill font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] mr-1">
      </span>
      <span class="text-xs">
        Message d'avertissement
      </span>
    </div>
  </div>
</div>
`;
